manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: projects-father-1217
  name: father-1217
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 1217.asimt.sa
      secretName: cluster-issuer-certificate-father-1217
  rules:
    - host: 1217.asimt.sa
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: father-1217
              port: 
                number: 80
